@@ -1,3 +1,7 @@
+2008-09-01 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/sources/virtual_dictionary.rb: Fixed typo.
+
 2008-08-31 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/binary_search.rb: Renamed BinarySearch module to
